// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`defaults should accept Headers 1`] = `
Array [
  "/",
  Object {
    "headers": Object {
      "a": "1, 2",
      "b": "1",
      "c": "1",
    },
  },
]
`;

exports[`defaults should accept Headers 2`] = `
Array [
  "/",
  Object {
    "headers": Object {
      "a": "1, 2",
      "b": "2",
      "c": "1",
    },
  },
]
`;

exports[`defaults should add defaults 1`] = `
Array [
  "/",
  Object {
    "credentials": "include",
    "headers": Object {},
  },
]
`;

exports[`defaults should add defaults and headers 1`] = `
Array [
  "/",
  Object {
    "credentials": "include",
    "headers": Object {
      "content-type": "text/plain",
      "x-version": "1.0",
    },
  },
]
`;

exports[`defaults should add defaults and headers 2`] = `
Array [
  "/",
  Object {
    "credentials": "omit",
    "headers": Object {
      "content-type": "text/json",
    },
  },
]
`;

exports[`defaults should filter null or undefined 1`] = `
Array [
  "/",
  Object {
    "headers": Object {
      "c": "0",
      "d": "false",
      "e": "",
      "g": "1",
    },
  },
]
`;

exports[`defaults should work without options 1`] = `
Array [
  "/",
  Object {
    "headers": Object {},
  },
]
`;
